Fix horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@ body {
     height: 100%;
     background-color: white;
     overflow-x: hidden;
-    position: relative;
 }
 html {
     scroll-behavior: smooth;
